--- a/index.html
+++ b/index.html
@@ -104,15 +104,39 @@
           </a>
         </div>
         <div class="social-card">
+          <a href="https://www.website-anda.com" target="_blank" aria-label="Website">
+            <i class="fas fa-globe"></i>
+            <p>Website</p>
+          </a>
+        </div>
+        <div class="social-card">
           <a href="https://ko-fi.com/ashar_syamsuddin" target="_blank" aria-label="Ko-fi">
-            <i class="fab fa-coffee"></i>
+            <i class="fas fa-coffee"></i>
             <p>Ko-fi</p>
           </a>
         </div>
         <div class="social-card">
-          <a href="https://www.website-anda.com" target="_blank" aria-label="Website">
-            <i class="fas fa-globe"></i>
-            <p>Website</p>
+          <a href="https://www.buymeacoffee.com/ashar_syamsuddin" target="_blank" aria-label="Buy Me a Coffee">
+            <i class="fas fa-coffee"></i>
+            <p>Buy Me a Coffee</p>
+          </a>
+        </div>
+        <div class="social-card">
+          <a href="https://gumroad.com" target="_blank" aria-label="Gumroad">
+            <i class="fas fa-shopping-cart"></i>
+            <p>Gumroad</p>
+          </a>
+        </div>
+        <div class="social-card">
+          <a href="https://creativemarket.com" target="_blank" aria-label="Creative Market">
+            <i class="fas fa-store"></i>
+            <p>Creative Market</p>
+          </a>
+        </div>
+        <div class="social-card">
+          <a href="https://themeforest.net" target="_blank" aria-label="ThemeForest">
+            <i class="fas fa-palette"></i>
+            <p>ThemeForest</p>
           </a>
         </div>
       </div>
